# ev

./: .clangd  .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  config.json  docker-compose.yaml  meson.build
docs/: DEPENDENCIES.md  DROGON_LEARNING.md  INFO.md  MESON_COMPILE.md  PROTOCOL.md  TASKS.md  zkp_format.py
include/: bignum.hpp  merklie_tree.hpp  pailier.hpp
include/controllers/: auth_controller.hpp  test_controller.hpp
include/crypto/: bigint.hpp  bignum.hpp  blind_signature.hpp  crypto_params.hpp  merklie_tree.hpp  pailier.hpp  zkp.hpp
include/filters/: jwt_auth_filter.h
src/: bignum.hpp  main.cpp
src/controllers/: auth_controller.cpp  registrar_controller.cpp  tally_controller.cpp  test_controller.cpp  user_controller.cpp  voting_controller.cpp
src/crypto/: bigint.cpp  crypto_params.cpp
src/filters/: jwt_auth_filter.cpp
tests/: tests.cpp
views/: login.csp  profile.csp  registration.csp  test.csp  voting.csp
www/: index.html  login.html  main.css  signup.html  test.html
www/css/: main.css
www/js/: zkp.js
